--- a/start.html
+++ b/start.html
@@ -7,6 +7,11 @@
 </head>
 <body>
     <h1>my start file is not index.html file</h1>
+    <div>
+        <h3>new blog</h3>
+        <h5>look mama i can write a blog</h5>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Assumenda, minima harum. Ipsum impedit, autem amet architecto aperiam quod veniam maiores sed eligendi eum magnam blanditiis incidunt atque quas ex accusamus. Sunt exercitationem, magni aperiam maxime eveniet odio vitae possimus debitis.</p>
+    </div>
     <img src="dim.jpg" alt="">
 </body>
 </html>
